--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   cached_network_image: ^2.5.0
+  font_awesome: ^5.10.1
+  google_fonts: ^1.1.2
 
 dev_dependencies:
   flutter_test:
