--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cached_network_image: ^2.5.0
   font_awesome: ^5.10.1
   google_fonts: ^1.1.2
+  provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
