--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -27,11 +27,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  cached_network_image: ^2.5.0
-  font_awesome: ^5.10.1
-  google_fonts: ^1.1.2
-  provider: ^4.3.3
+  cupertino_icons: ^1.0.2
+  cached_network_image: ^3.0.0-nullsafety
+  google_fonts: ^2.0.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
